[tool.poetry]
name = "tiktok-api"
version = "0.1.0"
description = ""
authors = ["Charles Jing <cjing@mintel.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
playwright = "==1.32.0"
peewee = "^3.17.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
