[tool.poetry]
name = "tiktok-api"
version = "0.1.0"
description = ""
authors = ["Charles Jing <cjing@mintel.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
peewee = "^3.17.1"
tiktokapi = "^6.2.0"
tenacity = "^8.2.3"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.2"
black = "^24.3.0"
flake8 = "^7.0.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
